@@ -362,9 +362,9 @@ namespace tgui
         /// @brief Loads the child widgets from a text file
         ///
         /// @param filename  Filename of the widget file
-        ///
+        /// @param replaceExisting  Remove existing widgets first if there are any
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        void loadWidgetsFromFile(const std::string& filename);
+        void loadWidgetsFromFile(const std::string& filename, bool replaceExisting = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -380,18 +380,18 @@ namespace tgui
         /// @brief Loads the child widgets from a string stream
         ///
         /// @param stream  stringstream that contains the widget file
-        ///
+        /// @param replaceExisting  Remove existing widgets first if there are any
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        void loadWidgetsFromStream(std::stringstream& stream);
+        void loadWidgetsFromStream(std::stringstream& stream, bool replaceExisting = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Loads the child widgets from a string stream
         ///
         /// @param stream  stringstream that contains the widget file
-        ///
+        /// @param replaceExisting  Remove existing widgets first if there are any
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        void loadWidgetsFromStream(std::stringstream&& stream);
+        void loadWidgetsFromStream(std::stringstream&& stream, bool replaceExisting = true);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
